# MatBloom-API

./: .env  .env.example  .gitignore  Dockerfile  pyproject.toml  read.me  readme.MD  schema.sql
app/: main.py  readme
app/api/: Dockerfile
app/api/endpoints/: answer_sheet.py  content.py  question.py  test.py  user.py
app/api/schemas/: classroom.py  content.py  question.py  student.py  test.py  test_response.py  user.py
app/api/security/: auth.py
app/api/services/: answer_sheet_corrector.py  corretor.py  pdf_generate.py  system_analises.py  test_generate.py
app/db/: Dockerfile
app/db/models/: Dockerfile  connection.py  models.py
app/db/repositories/: content_repository.py  question_repository.py  test_repository.py  test_response_repository.py  user_repository.py
app/db/scripts/: mock.sql  schema.sql
app/test/integration/: test_bd.py
app/test/unit/api/: test_api_test.py
